unpackaged/objects/FAQ__c.object
<CustomObject>
  <description>SBU: PREP &amp; ORTHO; Counrty: Japan - Used in Japan to keep track of FAQs related to their Items. Copied from their old CRM system.</description>
  <fields>
    <fullName>Answer__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Counrty: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Counrty: Japan</inlineHelpText>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Category__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Counrty: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Counrty: Japan</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Spec/Component</fullName>
        </value>
        <value>
          <fullName>Usage/Case Consult</fullName>
        </value>
        <value>
          <fullName>Complaint</fullName>
        </value>
        <value>
          <fullName>Availability</fullName>
        </value>
        <value>
          <fullName>Insurance Related</fullName>
        </value>
        <value>
          <fullName>Material Request</fullName>
        </value>
        <value>
          <fullName>Repair/Lend</fullName>
        </value>
        <value>
          <fullName>Price/Stock</fullName>
        </value>
        <value>
          <fullName>Order/Logistic</fullName>
        </value>
        <value>
          <fullName>Category/JAN</fullName>
        </value>
        <value>
          <fullName>Sales Related</fullName>
        </value>
        <value>
          <fullName>Others</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Image_1__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Counrty: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Counrty: Japan</inlineHelpText>
    <label>Image 1</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Image_2__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Counrty: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Counrty: Japan</inlineHelpText>
    <label>Image 2</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SBU: PREP &amp; ORTHO; Counrty: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Counrty: Japan</inlineHelpText>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>FAQs</relationshipLabel>
    <relationshipName>FAQs</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>NonERPProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-ERP Product</label>
    <referenceTo>Non_ERP_Products__c</referenceTo>
    <relationshipLabel>FAQs</relationshipLabel>
    <relationshipName>FAQs</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Question__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Counrty: Japan</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Counrty: Japan</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Sort_Order__c</fullName>
    <description>SBU: PREP &amp; ORTHO; Counrty: Japan - Use to view by this order</description>
    <inlineHelpText>SBU: PREP &amp; ORTHO; Counrty: Japan - Use to view by this order</inlineHelpText>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>FAQ</label>
  <listViews>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <nameField>
    <label>FAQ Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>FAQs</pluralLabel>
  <sharingModel>Read</sharingModel>
</CustomObject>